# ImageFusion

code/ffmpeg/: transcode.c  transcode_audio.c
code/fusion_fuc/: CMakeLists.txt  main.cpp  test.cpp
code/fusion_fuc/include/: stitcher.h
code/fusion_fuc/src/: stitcher.cpp
code/h264Rtsp/: main.c  rtp.c  test.h264
code/player/: Makefile  video_player.c
code/test/: CMakeList.txt  CMakeLists.txt  correct.cpp  correct.h  correct_frame.cpp  correct_frame.h  correct_old.cpp  getGuass.cpp  hessian_feature_1.cpp  hessian_feature_2.cpp  image_enhancement.cpp  scale_space.cpp  sift_correct.cpp  sift_correct_1.cpp  sift_correct_2.cpp  sift_correct_3.cpp  sift_feature_1.cpp  sift_feature_2.cpp  sift_feature_3.cpp  sift_vide_1.cpp  sift_vide_2.cpp  sift_vide_3.cpp  sift_vide_4.cpp  sift_video.cpp  test.cpp
code/video_fusion_player/: common.h  player.cpp  stream_context.hpp  task.hpp
code/video_fusion_player/src/: CMakeLists.txt  common.h  player.cpp  stitcher.cpp  stream_context.hpp  task.hpp
doc/: README.md  basic_SIFT.txt
